--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
+    "typescript": "~4.5.5"
   },
   "private": true
 }
