--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
 		"strict": true,
 		"baseUrl": ".",
 		"paths": {
-			"*": ["*", "*.ios", "*.android"]
+			"*": [
+				"*",
+				"*.ios",
+				"*.android"
+			]
 		}
 	}
 }
