--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"web": "expo start --web",
 		"eject": "expo eject",
 		"format": "prettier --write ./app ./App.tsx",
-    "lint": "eslint ./app ./App.tsx"
+		"lint": "eslint ./app ./App.tsx"
 	},
 	"dependencies": {
 		"expo": "~44.0.0",
@@ -23,7 +23,11 @@
 		"@babel/core": "^7.12.9",
 		"@types/react": "~17.0.21",
 		"@types/react-native": "~0.64.12",
+		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"babel-plugin-module-resolver": "^4.1.0",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.4.0",
+		"eslint-plugin-react-native": "^4.0.0",
 		"typescript": "~4.5.5"
 	},
 	"private": true
