--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-dom": "17.0.1",
 		"react-native": "0.64.3",
 		"react-native-web": "0.17.1",
-		"expo-constants": "~13.0.1"
+		"expo-constants": "~13.0.1",
+		"react-native-gesture-handler": "~2.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
