Add hooks folder as import path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
 			"constants/*": ["app/constants/*"],
 			"store/*": ["app/store/*"],
 			"types/*": ["app/types/*"],
-			"helpers/*": ["app/helpers/*"]
+			"helpers/*": ["app/helpers/*"],
+			"hooks/*": ["app/hooks/*"]
 		}
 	}
 }
