--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-	"name": "done-with-it",
-	"version": "1.0.0",
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web",
-		"eject": "expo eject",
-		"format": "prettier --write ./app ./App.tsx",
-		"lint": "eslint ./app ./App.tsx"
-	},
-	"dependencies": {
-		"expo": "~44.0.0",
-		"expo-constants": "~13.0.1",
-		"expo-status-bar": "~1.2.0",
-		"formik": "^2.2.9",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"react-native": "0.64.3",
-		"react-native-gesture-handler": "~2.1.0",
-		"react-native-web": "0.17.1",
-		"yup": "^0.32.11"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.12.9",
-		"@types/react": "~17.0.21",
-		"@types/react-native": "~0.64.12",
-		"@typescript-eslint/eslint-plugin": "^5.17.0",
-		"eslint-plugin-react": "^7.29.4",
-		"eslint-plugin-react-hooks": "^4.4.0",
-		"eslint-plugin-react-native": "^4.0.0",
-		"typescript": "~4.5.5"
-	},
-	"private": true
+  "name": "done-with-it",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "format": "prettier --write ./app ./App.tsx",
+    "lint": "eslint ./app ./App.tsx"
+  },
+  "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "expo": "~44.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-image-picker": "~12.0.1",
+    "expo-location": "~14.0.1",
+    "expo-status-bar": "~1.2.0",
+    "formik": "^2.2.9",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11",
+    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "3.3.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "typescript": "~4.5.5"
+  },
+  "private": true
 }
