--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint ./app ./App.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
@@ -23,10 +25,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-web": "0.17.1",
-    "yup": "^0.32.11",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-safe-area-context": "3.3.2"
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
