--- a/server/package.json
+++ b/server/package.json
@@ -2,32 +2,38 @@
 	"name": "done-with-it-backend",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.ts",
+	"main": "src/index.ts",
 	"scripts": {
 		"start": "node dist/index.js",
 		"compile": "tsc",
-		"dev": "ts-node",
+		"dev": "nodemon",
 		"format": "prettier --write **/*.ts"
-	},
-	"engines": {
-		"node": "12.6.x"
 	},
 	"keywords": [],
 	"author": "Mosh Hamedani",
 	"license": "ISC",
 	"dependencies": {
+		"apisauce": "^2.1.5",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"config": "^3.3.1",
 		"expo-server-sdk": "^3.5.0",
 		"express": "^4.17.1",
 		"helmet": "^3.22.0",
-		"joi": "^14.3.1",
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.2",
-		"sharp": "^0.25.2"
+		"sharp": "^0.25.2",
+		"utility-types": "^3.10.0",
+		"zod": "^3.17.3"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.2"
+		"@types/compression": "^1.7.2",
+		"@types/config": "^0.0.41",
+		"@types/express": "^4.17.13",
+		"@types/helmet": "^4.0.0",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/multer": "^1.4.7",
+		"@types/node": "^18.0.0",
+		"@types/sharp": "^0.30.4"
 	}
 }
