--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "apisauce": "^2.1.5",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
