--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,10 +12,13 @@
     "lint": "eslint ./app ./App.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/netinfo": "7.1.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "apisauce": "^2.1.5",
+    "dayjs": "^1.11.3",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
@@ -31,9 +34,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "yup": "^0.32.11",
-    "@react-native-community/netinfo": "7.1.3",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
