--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,11 +20,13 @@
     "apisauce": "^2.1.5",
     "dayjs": "^1.11.3",
     "expo": "~44.0.0",
+    "expo-blur": "~11.0.0",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -36,7 +38,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11",
-    "expo-blur": "~11.0.0"
+    "expo-secure-store": "~11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
