--- a/mobile/package.json
+++ b/mobile/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11",
-    "expo-secure-store": "~11.1.0"
+    "expo-secure-store": "~11.1.0",
+    "expo-splash-screen": "~0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
