--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,7 +39,9 @@
     "react-native-web": "0.17.1",
     "yup": "^0.32.11",
     "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1"
+    "expo-splash-screen": "~0.14.1",
+    "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
