--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,9 @@
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
+    "expo-notifications": "~0.14.0",
+    "expo-secure-store": "~11.1.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
@@ -37,11 +40,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "yup": "^0.32.11",
-    "expo-secure-store": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-notifications": "~0.14.0",
-    "expo-permissions": "~13.1.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
